--- a/snk.yml
+++ b/snk.yml
@@ -1,19 +1,30 @@
-- uses: Platane/snk@v3
-  with:
-    # github user name to read the contribution graph from (**required**)
-    # using action context var `github.repository_owner` or specified user
-    github_user_name: ${{ github.jsfl-24 }}
+name: Generate Snake Game
 
-    # list of files to generate.
-    # one file per line. Each output can be customized with options as query string.
-    #
-    #  supported options:
-    #  - palette:     A preset of color, one of [github, github-dark, github-light]
-    #  - color_snake: Color of the snake
-    #  - color_dots:  Coma separated list of dots color.
-    #                 The first one is 0 contribution, then it goes from the low contribution to the highest.
-    #                 Exactly 5 colors are expected.
-    outputs: |
-      dist/github-snake.svg
-      dist/github-snake-dark.svg?palette=github-dark
-      dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+on:
+  schedule:
+    - cron: '0 0 * * 0' # every Sunday at midnight UTC
+  push:
+    branches:
+      - main # or master, depending on your default branch name
+
+jobs:
+  generate-snake-game:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Generate snake game from GitHub contribution grid
+        uses: Platane/snk@v3.3.0
+        with:
+          github_user: your-github-username
+          png_width: 1000
+          png_height: 1000
+          # You can adjust the width and height to fit your preference
+
+      - name: Commit and push generated snake image
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "Update snake game image"
+          file_pattern: "*.png"
+          branch: main # or master, depending on your default branch name
